dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.63)

AC_INIT([ebview],[0.3.6],[http://ebview.sourceforge.net/])
AC_CONFIG_SRCDIR(src/ebview.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
ALL_LINGUAS="ja"
AM_GLIB_GNU_GETTEXT
dnl AC_FUNC_SETVBUF_REVERSED

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
PKG_CHECK_MODULES(PANGOFT2, pangoft2, have_pangoft2="yes", have_pangoft2="no  (Pango-FT2 not found)")
AC_SUBST(PANGOFT2_CFLAGS)
AC_SUBST(PANGOFT2_LIBS)

eb_LIB_EB4

dnl Checks for header files.
AC_PATH_X
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([argz.h fcntl.h langinfo.h libintl.h limits.h locale.h malloc.h nl_types.h stddef.h stdlib.h string.h strings.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h unistd.h eb/eb.h iconv.h libintl.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_DIAGNOSE([obsolete],[your code may safely assume C89 semantics that RETSIGTYPE is void.
Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.])dnl
AC_CACHE_CHECK([return type of signal handlers],[ac_cv_type_signal],[AC_COMPILE_IFELSE(
[AC_LANG_PROGRAM([#include <sys/types.h>
#include <signal.h>
],
		 [return *(signal (0, 0)) (0) == 1;])],
		   [ac_cv_type_signal=int],
		   [ac_cv_type_signal=void])])
AC_DEFINE_UNQUOTED([RETSIGTYPE],[$ac_cv_type_signal],[Define as the return type of signal handlers
		    (`int' or `void').])


dnl Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_CHECK_FUNCS([__argz_count __argz_next __argz_stringify getcwd isascii mempcpy memset mkdir munmap nl_langinfo putenv regcomp rmdir select setenv setlocale socket stpcpy strcasecmp strchr strdup strerror strrchr strstr strtol])

AC_DEFINE_UNQUOTED(LOCALEDIR, "${PREFIX}/share/locale", Where .mo file is.)
AC_DEFINE_UNQUOTED(PACKAGEDIR, "${PREFIX}/share/${PACKAGE}", Where EBView data goes.)

case "`uname -s`" in
CYGWIN_*) THREAD_LIBS=-lpthreadGC ;CYGWIN_CFLAGS="-mno-cygwin -mwindows -mms-bitfields";RES_FILE=ebview.res;EXTRA_LIBS="-lregex -lwinmm" ;;
FreeBSD*) THREAD_LIBS=-pthread ;;
Linux*) THREAD_LIBS=-lpthread ;;
*) THREAD_LIBS=-lpthread ;;
esac

AC_SUBST(THREAD_LIBS)
AC_SUBST(CYGWIN_CFLAGS)
AC_SUBST(RES_FILE)
AC_SUBST(EXTRA_LIBS)


AC_CONFIG_FILES([Makefile
                 data/Makefile
                 doc/Makefile
                 intl/Makefile
                 src/Makefile
                 util/Makefile
		 po/Makefile.in 
		 data/about.jp data/about.en])
AC_OUTPUT
